# GrADS

./: COPYRIGHT  ChangeLog  INSTALL  Makefile.am  Makefile.in  README.md  acinclude.m4  aclocal.m4  bootstrap  configure  configure.ac
autom4te.cache/: output.1  output.2  requests  traces.0  traces.1  traces.2
data/: hires  lowres  mres
data/tables/: B2L-058-001-B.001  B2L-128-001-B.001  B2M-000-002-B  B3L-160000-006001-B.txt  B3L-160000-006001-D.txt  B3M-000-005-B.new  convert.c
doc/: 16colors.html  GrADS.css  SDFdescriptorfile.html  Tutorial_Espanol.doc  about.html  aboutgriddeddata.html  aboutstationdata.html  advdisplay.html  advhardcopy.html  animation.html  ascii.html  basemap.html  basic.html  bufr.sample.data  bufr.sample.headers  bufrdescriptorfile.html  bufrformat.html  colorcontrol.html  commandline.html  commands.html  commandsatt.html  compression.html  coordinate.html  descriptorfile.html  dimenv.html  display.html  drawingtips.html  ensembles.html  expressions.html  font.html  fontcontrol.html  footnote1.html  functions.html  functionsatt.html  gadoc.html  gadocindex.html  gfs.ctl  gfsens.ctl  gradcomdclear.html  gradcomdclose.html  (+304 more)
etc/: mkinstalldirs
m4/: Xaw.m4  ax_lib_readline.m4  cairo.m4  ga_lib_readline.m4  gadap.m4  gd.m4  geotiff.m4  grib2.m4  gui.m4  hdf4.m4  hdf5.m4  libdap.m4  libnc-dap.m4  libnc-dap_header.m4  libsx.m4  netcdf.m4  netcdf_header.m4  shapelib.m4  udunits.m4
src/: Makefile.am  Makefile.in  bitmaps2.h  bufrscan.c  bufrstn.c  config.h.in  dodstn.c  gabufr.c  gabufr.h  gabufrtbl.c  gacfg.c  gaddes.c  gaexpr.c  gafunc.c  gagmap.c  gagmap.h  gagui.c  gagui.h  gagx.c  gaio.c  galloc.c  gamach.c  gasdf.c  gasdf.h  gasdf_std_time.h  gatxt.c  gatypes.h  gauser.c  gautil.c  grads.c  grads.h  gradspy.c  gradspy.h  gradspy3.c  grib2scan.c  gribmap.c  gribscan.c  gs.h  gscrpt.c  gsgui.c  (+27 more)
